--- a/safsaf.html
+++ b/safsaf.html
@@ -10,6 +10,8 @@
 <body>
 
 
+
+
     <!-- BOTÃO DE SUBIR AO TOPO -->
     <div class="subir-ao-topo">
         <a href="#"><button><i class='fas'>&#xf102;</i></button></a>
@@ -17,7 +19,7 @@
 
     <!-- SCRIPTS -->
     <script src="assets/js/gobal.js"></script>
-    <script src="assets/js/main.js"></script>
+    <Script src="assets/js/exemplo.js"></Script>
     <script src="assets/js/control.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
